--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -61,8 +61,11 @@
 <body id="page-top" style="overflow-y: hidden;" onload="CE_DeactivateNavBy()">
     
     <div id="wrapper">
+
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 0;border-bottom-right-radius: 0;background: #000000;">
-            <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.ai/home/"><img style="height: auto;width: 189px;margin: -11px;margin-bottom: 0px; margin-top: 10px;" src="assets/img/NegroLogo.png" /></a>
+            <div class="container-fluid d-flex flex-column p-0">
+                <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.ai/home/"><img style="height: auto;width: 189px;margin: -11px;margin-bottom: 0px; margin-top: 10px;" src="assets/img/NegroLogo.png" /></a>
+                <p class="text-light" id="nombreProyectoLbl" style="font-family: 'hedliner', sans-serif;font-size: 12px;margin-left: 10px;"></p>
                 <div style="height: 30px;"></div>
                 <ul id="accordionSidebar" class="navbar-nav text-light" style="font-family: 'hedliner', sans-serif;">
                     <li id="CreacionDeEstudioLNK" class="nav-item" style="font-family: 'hedliner', sans-serif;"><a class="nav-link" href="https://www.cheetah-research.ai/configuration/study/" style="font-family: Nunito, sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 20px;font-family: 'hedliner', sans-serif;color: #C0601C;">
@@ -95,6 +98,8 @@
             </div>
         </nav>
         </nav>
+
+        
         <div class="d-flex flex-column" id="content-wrapper" style="overflow-y: hidden;">
             <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: calc(100vh - 1px);padding: 10px;border-radius: 0px;overflow-y: scroll;">
                 <div id="overlay" style="display: none;">
@@ -127,6 +132,7 @@
     <script src="assets/js/theme.js"></script>
     <script src="js/ScriptSurv.js"></script>
     <script src="js/Script_CheckSession.js"></script>
+
 
 </body>
 
