--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -68,11 +68,13 @@
     <div id="wrapper">
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-end sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 10px;border-bottom-right-radius: 10px;background: var(--bs-CR-orange-2);">
             
-            <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 0;border-bottom-right-radius: 0;background: var(--bs-CR-black-dark);">
-                <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.ai/home/"><img style="height: auto;width: 189px;margin: -11px;margin-bottom: 0px; margin-top: 10px;" src="assets/img/NegroLogo.png" /></a>
+            <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 0;border-bottom-right-radius: 0;background: #000000;">
+                <div class="container-fluid d-flex flex-column p-0">
+                    <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.ai/home/"><img style="height: auto;width: 189px;margin: -11px;margin-bottom: 0px; margin-top: 10px;" src="assets/img/NegroLogo.png" /></a>
+                    <p class="text-light" id="nombreProyectoLbl" style="font-family: 'hedliner', sans-serif;font-size: 12px;margin-left: 10px;"></p>
                     <div style="height: 30px;"></div>
                     <ul id="accordionSidebar" class="navbar-nav text-light" style="font-family: hedliner;">
-                        <li id="CreacionDeEstudioLNK" class="nav-item" style="font-family: hedliner;"><a class="nav-link" href="https://www.cheetah-research.ai/configuration/study/" style="font-family: Nunito, sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 20px;font-family: hedliner;color: var(--bs-CR-orange);">
+                        <li id="CreacionDeEstudioLNK" class="nav-item" style="font-family: hedliner;"><a class="nav-link active" href="https://www.cheetah-research.ai/configuration/study/" style="font-family: Nunito, sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 20px;font-family: hedliner;color: var(--bs-CR-orange);">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM11 7C11 6.44772 10.5523 6 10 6C9.44772 6 9 6.44772 9 7V9H7C6.44772 9 6 9.44771 6 10C6 10.5523 6.44772 11 7 11H9V13C9 13.5523 9.44772 14 10 14C10.5523 14 11 13.5523 11 13V11H13C13.5523 11 14 10.5523 14 10C14 9.44772 13.5523 9 13 9H11V7Z" fill="currentColor"></path>
                                 </svg><span style="font-family: hedliner;">CREACION DE ESTUDIO</span></a></li>
                         <li id="CreacionDeEncuestadorLNK" class="nav-item" style="font-family: hedliner;"><a class="nav-link" href="https://www.cheetah-research.ai/configuration/interviewer/" style="font-family: hedliner;"><i class="icon ion-android-people" style="font-size: 20px;font-family: hedliner;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;">ENCUESTADOR</span></a></li>
@@ -81,7 +83,7 @@
                                     <path d="M3 5C3 3.89543 3.89543 3 5 3C5 4.65685 6.34315 6 8 6H10C11.6569 6 13 4.65685 13 3C14.1046 3 15 3.89543 15 5V11H10.4142L11.7071 9.70711C12.0976 9.31658 12.0976 8.68342 11.7071 8.29289C11.3166 7.90237 10.6834 7.90237 10.2929 8.29289L7.29289 11.2929C6.90237 11.6834 6.90237 12.3166 7.29289 12.7071L10.2929 15.7071C10.6834 16.0976 11.3166 16.0976 11.7071 15.7071C12.0976 15.3166 12.0976 14.6834 11.7071 14.2929L10.4142 13H15V16C15 17.1046 14.1046 18 13 18H5C3.89543 18 3 17.1046 3 16V5Z" fill="currentColor"></path>
                                     <path d="M15 11H17C17.5523 11 18 11.4477 18 12C18 12.5523 17.5523 13 17 13H15V11Z" fill="currentColor"></path>
                                 </svg><span style="font-family: hedliner;">ENCUESTA</span></a></li>
-                        <li id="LanzarEncuestaLNK" class="nav-item" style="font-family: hedliner;"><a class="nav-link active" href="https://www.cheetah-research.ai/configuration/launch/" style="font-family: hedliner;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 20px;font-family: hedliner;color: var(--bs-CR-orange);">
+                        <li id="LanzarEncuestaLNK" class="nav-item" style="font-family: hedliner;"><a class="nav-link" href="https://www.cheetah-research.ai/configuration/launch/" style="font-family: hedliner;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 20px;font-family: hedliner;color: var(--bs-CR-orange);">
                                     <path d="M4.5547 5.16795C4.24784 4.96338 3.8533 4.94431 3.52814 5.11833C3.20298 5.29235 3 5.63121 3 6V14C3 14.3688 3.20298 14.7077 3.52814 14.8817C3.8533 15.0557 4.24784 15.0366 4.5547 14.8321L10 11.2019V14C10 14.3688 10.203 14.7077 10.5281 14.8817C10.8533 15.0557 11.2478 15.0366 11.5547 14.8321L17.5547 10.8321C17.8329 10.6466 18 10.3344 18 10C18 9.66565 17.8329 9.35342 17.5547 9.16795L11.5547 5.16795C11.2478 4.96338 10.8533 4.94431 10.5281 5.11833C10.203 5.29235 10 5.63121 10 6V8.79815L4.5547 5.16795Z" fill="currentColor"></path>
                                 </svg><span style="font-family: hedliner;">LANZAR ESTUDIO</span></a></li>
                         <li id="InformacionDeEstudioLNK" class="nav-item" style="font-family: hedliner;"><a class="nav-link" href="" style="font-family: hedliner;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" fill="none" style="font-size: 20px;font-family: hedliner;color: var(--bs-CR-orange);">
@@ -101,6 +103,7 @@
                     </ul>
                 </div>
             </nav>
+        
 
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
