--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -61,8 +61,10 @@
         </nav>
 
         <div class="d-flex flex-column" id="content-wrapper">
-            <div class="card" id="contentCard_PaginaOverview" style="margin: 0px; height: 1000px ;max-height: calc(100vh - 0px); overflow-y: auto; padding: 10px;">
-                <div style="height: 49px;"></div>
+            <div class="card" id="contentCard_PaginaOverviewCont" style="margin: 0px; height: 1000px ;max-height: calc(100vh - 0px); overflow-y: auto; padding: 10px;">
+                <div class="card rounded-3 text-white --bs-CR-orange" id="contentCard_PaginaOverview" style="padding: 10px;">
+                    <!-- Content goes here -->
+                </div>
             </div>
         </div>
     </div>
