--- a/Modulo De config/HerramientasDelAdministrador.html
+++ b/Modulo De config/HerramientasDelAdministrador.html
@@ -72,7 +72,7 @@
 
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
-                <div class="card" id="contentCard_PaginaConversaConTuData" style="margin: 0px;height: calc(100vh - 0px);padding: 11px;overflow-y: scroll;">
+                <div class="card" id="contentCard_PaginaConversaConTuData" style="margin: 0px;height: calc(100vh - 0px);padding: 11px;overflow-y: scroll; position: relative;">
                     <h2 style="margin-left: 10px;color: var(--bs-emphasis-color);font-weight: bold;font-family: hedliner;">Herramientas del Administrador</h2>
                     <h1 style="margin-left: 10px;font-weight: bold;color: var(--bs-emphasis-color);font-size: 20px;font-family: hedliner;">Solicitudes de Acceso</h1>
                     <select id="inactiveUsersSelect" style="margin-left: 10px;margin-right: 10px;background: var(--bs-body-bg);margin-top: 10px;height: 45px;font-size: 20px;color: rgb(133,135,150);border-radius: 10px;border-color: var(--bs-tertiary-color);margin-bottom: 10px;font-family: IBM Plex Sans;">
@@ -89,10 +89,17 @@
                         </optgroup>
                     </select>
                     <button class="btn btn-primary" type="button" style="margin: 0px;width: 25vh;margin-left: 10px;background: #e8112d;font-weight: bold;border-color: #e8112d;font-family: 'hedliner', sans-serif;"onclick="eliminarEstudio()">Eliminar Estudio</button>
+
+                    <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%;">
+                        <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+    
+
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
