--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -26,7 +26,9 @@
             img {
                 display: none;
             }
-        }        
+        }  
+        
+
     </style>
 
 </head>
@@ -231,7 +233,7 @@
                 </div>
             </div>
 
-            <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%; margin-top: 10px; margin-bottom: -5px;">
+            <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%; margin-top: 10px; margin-bottom: -5px; background-color: #e4e4e4;">
                 <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
             </div>
         </div>
