--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -56,7 +56,7 @@
 
             </div>
         </nav>
-        <div class="d-flex flex-column" id="content-wrapper">
+        <div class="d-flex flex-column" id="content-wrapper" style="position: relative;">
             <div id="content">
                 <div class="card" id="contentCard_PaginaAnalisiDatos" style="margin: 0px; height: 1000px ;max-height: calc(100vh - 0px); overflow-y: auto; padding: 10px;">
 
@@ -212,6 +212,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%; margin-top: 10px; margin-bottom: -5px; background-color: #e4e4e4;">
+                <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
             </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
