--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid d-flex flex-column" id="Chat-BG" style="height: 92%;background: linear-gradient(#ffffff00 0%, #87939745 77%, #5f6f7581 85%, rgb(60,60,60) 90%, rgb(45,45,45) 92%, var(--bs-CR-gray-dark) 97%), transparent;backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);-webkit-backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);">
+    <div class="container-fluid d-flex flex-column" id="Chat-BG" style="height: 92%;background: linear-gradient(#ffffff00 0%, #87939745 77%, #5f6f7581 84%, rgba(60,60,60,0.91) 88%, rgba(45,45,45,0.97) 92%, var(--bs-CR-gray-dark) 97%), transparent;backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);-webkit-backdrop-filter: opacity(0.45) brightness(178%) contrast(200%) invert(100%);">
         <div class="row flex-fill justify-content-center align-items-center order-2" id="Chat-Box">
             <div class="col text-truncate d-sm-block d-md-block d-lg-block d-xl-block text-wrap" style="height: 100%;overflow-y: visible;">
                 <div class="row px-3 py-2" id="Empty-Feed" style="display: flex;">
@@ -115,6 +115,9 @@
                     <div class="col-auto col-sm-1 col-md col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-md-flex justify-content-md-end p-0" id="btSend-Cont" style="border-top-right-radius: 10px;border-bottom-right-radius: 10px;min-width: 50px;height: 100%;margin-right: 0px;position: static;"><button class="btn float-end h-100" id="btSend" type="button" style="border-radius: 10px;width: 100%;border-style: none;border-color: #2e2e2e;border-bottom-style: none;"><i class="fab fa-telegram-plane" id="btSend-Icon"></i></button></div>
                 </div>
             </div>
+        </div>
+        <div class="row text-wrap justify-content-center align-items-center align-content-center order-4" id="Copyright-Legend" style="margin-top: 5px;margin-bottom: -10px;text-align: center;width: 100%;color: var(--bs-CR-white)">
+            <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
