--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -49,6 +49,131 @@
             box-sizing: border-box; /* Incluye el padding en el ancho total */
         }
 
+        /* Enhanced question styling */
+        .list-group-item.enhanced-question {
+            border: 2px solid #e9ecef;
+            border-radius: 12px !important;
+            margin-bottom: 15px;
+            padding: 20px;
+            background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.07);
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .list-group-item.enhanced-question:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+            border-color: var(--bs-CR-orange);
+        }
+
+        .list-group-item.enhanced-question::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 4px;
+            height: 100%;
+            background: var(--bs-CR-orange);
+            opacity: 0.8;
+        }
+
+        .question-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin-bottom: 15px;
+        }
+
+        .question-text {
+            flex: 1;
+            margin-right: 15px;
+            line-height: 1.6;
+        }
+
+        .question-weight {
+            flex-shrink: 0;
+            font-size: 14px;
+            font-weight: 600;
+            padding: 8px 12px;
+            border-radius: 20px;
+            background: var(--bs-CR-orange);
+            color: var(--bs-CR-gray);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .question-attachment {
+            font-size: 12px;
+            color: #6c757d;
+            font-style: italic;
+            margin-bottom: 10px;
+            padding: 5px 10px;
+            background: #f8f9fa;
+            border-radius: 6px;
+            border-left: 3px solid var(--bs-CR-orange);
+        }
+
+        .question-actions {
+            display: flex;
+            gap: 8px;
+            flex-wrap: wrap;
+            margin-top: 15px;
+            padding-top: 15px;
+            border-top: 1px solid #e9ecef;
+        }
+
+        .question-actions .btn {
+            font-size: 12px;
+            padding: 6px 12px;
+            border-radius: 6px;
+            font-weight: 500;
+            transition: all 0.2s ease;
+        }
+
+        .question-actions .btn:hover {
+            transform: translateY(-1px);
+        }
+
+        .drag-handle {
+            position: absolute;
+            right: 15px;
+            top: 15px;
+            cursor: grab;
+            padding: 8px;
+            border-radius: 6px;
+            background: #f8f9fa;
+            border: 1px solid #dee2e6;
+            transition: all 0.2s ease;
+        }
+
+        .drag-handle:hover {
+            background: #e9ecef;
+            border-color: var(--bs-CR-orange);
+        }
+
+        .drag-handle:active {
+            cursor: grabbing;
+        }
+
+        .follow-questions {
+            margin-top: 10px;
+            padding: 10px;
+            background: #f8f9fa;
+            border-radius: 8px;
+            border-left: 3px solid var(--bs-CR-orange);
+        }
+
+        .follow-questions ul {
+            margin: 0;
+            padding-left: 20px;
+        }
+
+        .follow-questions li {
+            margin-bottom: 5px;
+            color: #495057;
+        }
+
 
     </style>
 
@@ -155,7 +280,7 @@
                 
                 <form class="p-3 p-xl-4" method="post" style="font-family: hedliner;">
                     <div class="mb-3" style="font-family: hedliner;">
-                        <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: hedliner;" data-i18n="Encuesta.hQuestion">Pregunta</p>
+                        <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: hedliner;" data-i18n="Encuesta.hQuestion">Nueva pregunta</p>
                         <div class="d-xl-flex justify-content-xl-start align-items-xl-end" style="font-family: hedliner;">
                             <textarea class="form-control" id="PreguntaTXT" name="Nombre" data-i18n-placeholder="Encuesta.inQuestion" style="width: 100%; height: 38px; font-family: IBM Plex Sans; line-height: 20px; overflow-y: auto;"></textarea>
                             <div class="d-xl-flex justify-content-xl-start align-items-xl-end" style="font-family: hedliner; margin-left: 10px;">
